crates/rome_cli/tests/snapshots/main_commands_ci/ci_does_not_run_formatter.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


